# python_django_3

./: .env.exapmle  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml  setup.cfg
apps/cars/: models.py
backend/: setup.cfg
backend/apps/auth/: urls.py
backend/apps/cars/: consumers.py  managers.py  models.py  router.py  serializer.py  services.py  urls.py  views.py
backend/apps/cars/migrations/: 0001_initial.py
backend/apps/chat/: consumers.py
backend/apps/users/: managers.py  serializers.py  urls.py
backend/configs/: asgi.py  celery.py  routing.py  settings.py  urls.py
backend/configs/extra_conf/: celery_conf.py  drf_yasg_conf.py  rest_conf.py
backend/core/dataclasses/: user_dataclass.py
backend/core/enums/: action_token_enum.py
backend/core/handlers/: error_handler.py
backend/core/management/commands/: wait_db.py
backend/core/middleware/: auth_socket_middleware.py
backend/core/services/: email_service.py  jwt_service.py
backend/templates/: base.html  recovery_password.html  register.html  spam.html  test.html
client/: index.html
configs/: settings.py
frontend/src/: App.js  index.js  router.js
frontend/src/components/CarContainer/: Car.js  CarForm.js  Cars.js  Chat.js
frontend/src/constants/: urls.js
frontend/src/pages/: CarPage.js  LoginPage.js
frontend/src/services/: apiService.js  authService.js  carService.js  socketService.js
